<resources>
    <string name="app_name">MeKotlin5.3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="may">мая</string>
    <string name="_17_21">_17_21</string>
    <string name="text1">Введите</string>
    <string name="text2">сделать</string>
    <string name="text3">Пропустить</string>
    <string name="text">text</string>
    <string name="title">title</string>
    <string name="note">note</string>
    <string name="data">_16_n_18_13</string>
    <string name="text4">Заметки</string>
    <string name="text5">поиск</string>
    <string name="plas">plas</string>
</resources>