<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".presentationUi.fragments.add.AddNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/arrow_left"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="22dp"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/white"/>

            <TextView
                android:id="@+id/text_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="18dp"
                android:text="@string/may"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="18dp"
                android:text="@string/_17_21"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/text_ed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text1"
            android:padding="22dp"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_ed_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text2"
            android:padding="22dp"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_one"
            android:layout_width="86dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:layout_margin="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="34dp"
            android:backgroundTint="@color/gray_dark"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_two"
            android:layout_width="86dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:layout_margin="15dp"
            android:layout_marginBottom="34dp"
            android:backgroundTint="@color/bodily"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_thri"
            android:layout_width="86dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom"
            android:layout_margin="15dp"
            android:layout_marginBottom="34dp"
            android:backgroundTint="@color/burgundy"
            app:cornerRadius="16dp" />

    </LinearLayout>
</FrameLayout>