<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentationUi.fragments.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gray_dark"
            android:paddingHorizontal="20dp">

            <ImageView
                android:id="@+id/iv_menu"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center|start"
                android:src="@drawable/menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text4"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_grit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center|end"
                android:src="@drawable/shape__2_" />
        </FrameLayout>

        <EditText
            android:id="@+id/et_serch_note"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/et_raunder"
            android:drawableStart="@drawable/shape"
            android:drawablePadding="10dp"
            android:hint="@string/text5"
            android:paddingHorizontal="14dp"
            android:textColorHint="@color/gray_et" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/note_item" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_note"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:backgroundTint="@color/orage"
        android:text="@string/plas"
        android:textSize="20sp"
        app:cornerRadius="100dp" />
</FrameLayout>